ID, Timestamp and Collectable

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,13 @@ kotlin.code.style=official
 
 kotlin.js.generate.executable.default=false
 kotlin.mpp.stability.nowarn=true
+# w: The following Kotlin/Native targets cannot be built on this machine and are disabled
+# To hide this message, add 'kotlin.native.ignoreDisabledTargets=true' to the Gradle properties.
 kotlin.native.ignoreDisabledTargets=true
+
+# Such dependencies are not applicable for Kotlin/Native, consider changing the dependency type to 'implementation' or 'api'.
+# To disable this warning, set the kotlin.native.ignoreIncorrectDependencies=true project property
+kotlin.native.ignoreIncorrectDependencies=true
 
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
 
