--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,9 @@ kotlin.native.ignoreDisabledTargets=true
 # To disable this warning, set the kotlin.native.ignoreIncorrectDependencies=true project property
 kotlin.native.ignoreIncorrectDependencies=true
 
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
+# 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
+# "-Xexpect-actual-classes"
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
 # https://kotlinlang.org/docs/native-improving-compilation-time.html#gradle-configuration
 org.gradle.workers.max=8
