--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,9 @@ kotlin.native.ignoreIncorrectDependencies=true
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 
 # https://kotlinlang.org/docs/native-improving-compilation-time.html#gradle-configuration
-org.gradle.workers.max=8
-#org.gradle.caching=true
+#org.gradle.workers.max=8
+org.gradle.parallel=true
+org.gradle.caching=true
 
 # https://kotlinlang.org/docs/gradle-compilation-and-caches.html#the-new-kotlin-compiler
 #kotlin.experimental.tryK2=true
