--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,10 @@ openjdk-jmh = "1.36"
 ktor = "2.3.7"
 
 slf4j = "2.0.7"
-suspendReversal = "0.1.0"
+suspendReversal = "0.2.0"
 ksp = "1.9.21-1.0.16"
+# https://square.github.io/kotlinpoet/
+kotlinPoet = "1.15.3"
 
 [libraries]
 # jetbrains-annotation
@@ -93,6 +95,10 @@ kotlinx-lincheck = "org.jetbrains.kotlinx:lincheck:2.19"
 # https://github.com/ForteScarlet/kotlin-suspend-interface-reversal
 suspend-reversal-annotations = { module = "love.forte.suspend-interface-reversal:annotations", version.ref = "suspendReversal" }
 suspend-reversal-processor = { module = "love.forte.suspend-interface-reversal:processor", version.ref = "suspendReversal" }
+
+ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+# https://square.github.io/kotlinpoet/interop-ksp/
+kotlinPoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "kotlinPoet" }
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
